--- a/requirements-cuda.txt
+++ b/requirements-cuda.txt
@@ -6,12 +6,16 @@ numpy~=2.2.6
 pillow~=11.2.1
 pillow-heif~=0.22.0
 
-# CUDA-enabled PyTorch (CUDA 12.1)
---extra-index-url https://download.pytorch.org/whl/cu121
-torch~=2.7.0+cu121
-torchvision~=0.22.0+cu121
+# CUDA-enabled PyTorch (CUDA 12.8)
+#--extra-index-url https://download.pytorch.org/whl/cu128
+#torch==2.7.0
+#torchvision==0.22.0
 
-qdrant-client~=1.14.2
+--extra-index-url https://download.pytorch.org/whl/nightly/cu128
+torch --pre
+torchvision --pre
+
+qdrant-client~=1.16.1
 psycopg[binary]~=3.2.3
 python-dotenv~=1.1.0
 psutil~=6.1.0
