--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,11 @@ requests~=2.32.3
 numpy~=2.2.6
 pillow~=11.2.1
 pillow-heif~=0.22.0
-torch~=2.7.0
-torchvision~=0.22.0
-qdrant-client~=1.14.2
+#torch~=2.7.0
+#torchvision~=0.22.0
+torch --pre
+torchvision --pre
+qdrant-client~=1.16.1
 psycopg[binary]~=3.2.3
 python-dotenv~=1.1.0
 psutil~=6.1.0
